Apply conversion to CopySignature macro with convert-to-copysig.py

--- a/Chap_API_Data_Mgmt.tex
+++ b/Chap_API_Data_Mgmt.tex
@@ -12,30 +12,27 @@
 
 The \refstruct{pmix_data_buffer_t} structure describes a data buffer used for packing and unpacking.
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-typedef struct pmix_data_buffer \{
-    /** Start of my memory */
-    char *base_ptr;
-    /** Where the next data will be packed to
-        (within the allocated memory starting
-        at base_ptr) */
-    char *pack_ptr;
-    /** Where the next data will be unpacked
-        from (within the allocated memory
-        starting as base_ptr) */
-    char *unpack_ptr;
-    /** Number of bytes allocated (starting
-        at base_ptr) */
-    size_t bytes_allocated;
-    /** Number of bytes used by the buffer
-        (i.e., amount of data -- including
-        overhead -- packed in the buffer) */
-    size_t bytes_used;
+\copySignature{pmix_data_buffer_t}{2.0}{
+typedef struct pmix_data_buffer \{ \\
+\hspace*{4\sigspace}/** Start of my memory */ \\
+\hspace*{4\sigspace}char *base_ptr; \\
+\hspace*{4\sigspace}/** Where the next data will be packed to \\
+\hspace*{8\sigspace}(within the allocated memory starting \\
+\hspace*{8\sigspace}at base_ptr) */ \\
+\hspace*{4\sigspace}char *pack_ptr; \\
+\hspace*{4\sigspace}/** Where the next data will be unpacked \\
+\hspace*{8\sigspace}from (within the allocated memory \\
+\hspace*{8\sigspace}starting as base_ptr) */ \\
+\hspace*{4\sigspace}char *unpack_ptr; \\
+\hspace*{4\sigspace}/** Number of bytes allocated (starting \\
+\hspace*{8\sigspace}at base_ptr) */ \\
+\hspace*{4\sigspace}size_t bytes_allocated; \\
+\hspace*{4\sigspace}/** Number of bytes used by the buffer \\
+\hspace*{8\sigspace}(i.e., amount of data -- including \\
+\hspace*{8\sigspace}overhead -- packed in the buffer) */ \\
+\hspace*{4\sigspace}size_t bytes_used; \\
 \} pmix_data_buffer_t;
-\end{codepar}
-\cspecificend
+}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -52,12 +49,9 @@ typedef struct pmix_data_buffer \{
 Allocate memory for a \refstruct{pmix_data_buffer_t} object and initialize it.
 This macro uses \textit{calloc} to allocate memory for the buffer and initialize all fields in it
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_DATA_BUFFER_CREATE}{2.0}{
 PMIX_DATA_BUFFER_CREATE(buffer);
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argout{buffer}{Variable to be assigned the pointer to the allocated \refstruct{pmix_data_buffer_t} (handle)}
@@ -70,12 +64,9 @@ PMIX_DATA_BUFFER_CREATE(buffer);
 Free a \refstruct{pmix_data_buffer_t} object and the data it contains.
 Free's the data contained in the buffer, and then free's the buffer itself
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_DATA_BUFFER_RELEASE}{2.0}{
 PMIX_DATA_BUFFER_RELEASE(buffer);
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{buffer}{Pointer to the \refstruct{pmix_data_buffer_t} to be released (handle)}
@@ -88,12 +79,9 @@ PMIX_DATA_BUFFER_RELEASE(buffer);
 
 Initialize a statically declared \refstruct{pmix_data_buffer_t} object.
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_DATA_BUFFER_CONSTRUCT}{2.0}{
 PMIX_DATA_BUFFER_CONSTRUCT(buffer);
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{buffer}{Pointer to the allocated \refstruct{pmix_data_buffer_t} that is to be initialized (handle)}
@@ -105,12 +93,9 @@ PMIX_DATA_BUFFER_CONSTRUCT(buffer);
 
 Release the data contained in a \refstruct{pmix_data_buffer_t} object.
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_DATA_BUFFER_DESTRUCT}{2.0}{
 PMIX_DATA_BUFFER_DESTRUCT(buffer);
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{buffer}{Pointer to the \refstruct{pmix_data_buffer_t} whose data is to be released (handle)}
@@ -124,12 +109,9 @@ PMIX_DATA_BUFFER_DESTRUCT(buffer);
 Load a blob into a \refstruct{pmix_data_buffer_t} object.
 Load the given data into the provided \refstruct{pmix_data_buffer_t} object, usually done in preparation for unpacking the provided data. Note that the data is \textit{not} copied into the buffer - thus, the blob must not be released until after operations on the buffer have completed.
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_DATA_BUFFER_LOAD}{2.0}{
 PMIX_DATA_BUFFER_LOAD(buffer, data, size);
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{buffer}{Pointer to a pre-allocated \refstruct{pmix_data_buffer_t} (handle)}
@@ -144,12 +126,9 @@ PMIX_DATA_BUFFER_LOAD(buffer, data, size);
 Unload the data from a \refstruct{pmix_data_buffer_t} object.
 Extract the data in a buffer, assigning the pointer to the data (and the number of bytes in the blob) to the provided variables, usually done to transmit the blob to a remote process for unpacking. The buffer's internal pointer will be set to NULL to protect the data upon buffer destruct or release - thus, the user is responsible for releasing the blob when done with it.
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
+\copySignature{PMIX_DATA_BUFFER_UNLOAD}{2.0}{
 PMIX_DATA_BUFFER_UNLOAD(buffer, data, size);
-\end{codepar}
-\cspecificend
+}
 
 \begin{arglist}
 \argin{buffer}{Pointer to the \refstruct{pmix_data_buffer_t} whose data is to be extracted (handle)}
@@ -177,16 +156,13 @@ Pack one or more values of a specified type into a buffer, usually for transmiss
 %%%%
 \format
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Data_pack(const pmix_proc_t *target,
-               pmix_data_buffer_t *buffer,
-               void *src, int32_t num_vals,
-               pmix_data_type_t type);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Data_pack}{2.0}{
+pmix_status_t \\
+PMIx_Data_pack(const pmix_proc_t *target, \\
+\hspace*{15\sigspace}pmix_data_buffer_t *buffer, \\
+\hspace*{15\sigspace}void *src, int32_t num_vals, \\
+\hspace*{15\sigspace}pmix_data_type_t type);
+}
 
 \begin{arglist}
 \argin{target}{Pointer to a \refstruct{pmix_proc_t} containing the nspace/rank of the process that will be unpacking the final buffer. A NULL value may be used to indicate that the target is based on the same \ac{PMIx} version as the caller. Note that only the target's nspace is relevant. (handle)}
@@ -244,17 +220,14 @@ Unpack values from a \refstruct{pmix_data_buffer_t}
 %%%%
 \format
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Data_unpack(const pmix_proc_t *source,
-                 pmix_data_buffer_t *buffer, void *dest,
-                 int32_t *max_num_values,
-                 pmix_data_type_t type);
+\copySignature{PMIx_Data_unpack}{2.0}{
+pmix_status_t \\
+PMIx_Data_unpack(const pmix_proc_t *source, \\
+\hspace*{17\sigspace}pmix_data_buffer_t *buffer, void *dest, \\
+\hspace*{17\sigspace}int32_t *max_num_values, \\
+\hspace*{17\sigspace}pmix_data_type_t type); \\
 
-\end{codepar}
-\cspecificend
+}
 
 
 \begin{arglist}
@@ -309,14 +282,11 @@ Copy a data value from one location to another.
 %%%%
 \format
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Data_copy(void **dest, void *src,
-               pmix_data_type_t type);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Data_copy}{2.0}{
+pmix_status_t \\
+PMIx_Data_copy(void **dest, void *src, \\
+\hspace*{15\sigspace}pmix_data_type_t type);
+}
 
 \begin{arglist}
 \argin{dest}{The address of a pointer into which the address of the resulting data is to be stored. (\code{void**})}
@@ -352,14 +322,11 @@ Pretty-print a data value.
 %%%%
 \format
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Data_print(char **output, char *prefix,
-                void *src, pmix_data_type_t type);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Data_print}{2.0}{
+pmix_status_t \\
+PMIx_Data_print(char **output, char *prefix, \\
+\hspace*{16\sigspace}void *src, pmix_data_type_t type);
+}
 
 \begin{arglist}
 \argin{output}{The address of a pointer into which the address of the resulting output is to be stored. (\code{char**})}
@@ -393,14 +360,11 @@ Copy a payload from one buffer to another
 %%%%
 \format
 
-\versionMarker{2.0}
-\cspecificstart
-\begin{codepar}
-pmix_status_t
-PMIx_Data_copy_payload(pmix_data_buffer_t *dest,
-                       pmix_data_buffer_t *src);
-\end{codepar}
-\cspecificend
+\copySignature{PMIx_Data_copy_payload}{2.0}{
+pmix_status_t \\
+PMIx_Data_copy_payload(pmix_data_buffer_t *dest, \\
+\hspace*{23\sigspace}pmix_data_buffer_t *src);
+}
 
 \begin{arglist}
 \argin{dest}{Pointer to the destination \refstruct{pmix_data_buffer_t} (handle)}
